# coin-wars-2019

./: CMakeLists.txt  conanfile.txt
src/: ASerial.cpp  ASerial.h  Board.cpp  Board.h  CoinControlModule.cpp  CoinControlModule.h  Database.cpp  Database.h  Enumerations.h  Events.h  MainState.cpp  MainState.h  RandomVideo.cpp  RandomVideo.h  Scene.cpp  Scene.h  SceneRenderer.cpp  SceneRenderer.h  ScreenSaverModule.cpp  ScreenSaverModule.h  Settings.cpp  Settings.h  UI.cpp  UI.h  VideoControlModule.cpp  VideoControlModule.h  main.cpp
src/Cinnabar/: Buffer.cpp  Buffer.h  Core.cpp  Core.h  EventBroker.cpp  EventBroker.h  Framebuffer.cpp  Framebuffer.h  InputModule.cpp  InputModule.h  Logging.cpp  Logging.h  Module.cpp  Module.h  NanoVGModule.cpp  NanoVGModule.h  RenderModule.cpp  RenderModule.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Signals.h  Sprite.cpp  Sprite.h  State.cpp  State.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
src/Cinnabar/Logging/: ConsoleSink.cpp  ConsoleSink.h  Dispatcher.cpp  Dispatcher.h  FileSink.cpp  FileSink.h  Sink.h
src/Cinnabar/Math/: AABB.cpp  AABB.h  Constants.cpp  Constants.h  Math.h  Matrix3.cpp  Matrix3.h  Matrix4.cpp  Matrix4.h  PostfixEvaluator.cpp  PostfixEvaluator.h  Quaternion.cpp  Quaternion.h  Random.cpp  Random.h  Ray.cpp  Ray.h  Vector2.h  Vector3.h  Vector4.h
src/UIWidgets/: Canvas.cpp  Canvas.h  CoinQueue.cpp  CoinQueue.h  HUD.cpp  HUD.h  TeamPicker.cpp  TeamPicker.h  UIWidget.cpp  UIWidget.h
